crates/ddlog-syntax/tests/validation/fail/too_many_attribute_commas.dl
// kind:item validate:true pass:false ignore:false
#[foo = bar,, bar = baz]
fn foo() {}
